RESOLVED FIXED119731
[GTK] fast/images/exif-orientation-composited.html is failing
https://bugs.webkit.org/show_bug.cgi?id=119731
Summary [GTK] fast/images/exif-orientation-composited.html is failing
Zan Dobersek
Reported 2013-08-13 01:43:14 PDT
The fast/images/exif-orientation-composited.html layout test is failing since added in r153797. http://trac.webkit.org/changeset/153797 http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fimages%2Fexif-orientation-composited.html --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/fast/images/exif-orientation-composited-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/fast/images/exif-orientation-composited-actual.txt @@ -12,7 +12,7 @@ img1 size = 100px by 50px img2 size = 100px by 50px img3 size = 100px by 50px -img4 size = 50px by 100px -img5 size = 50px by 100px -img6 size = 50px by 100px -img7 size = 50px by 100px +img4 size = 100px by 50px +img5 size = 100px by 50px +img6 size = 100px by 50px +img7 size = 100px by 50px
Attachments
Patch (3.01 KB, patch)
2013-09-23 12:26 PDT, Anton Obzhirov
no flags
Anton Obzhirov
Comment 1 2013-09-23 12:26:51 PDT
WebKit Commit Bot
Comment 2 2013-09-24 07:17:13 PDT
Comment on attachment 212380 [details] Patch Clearing flags on attachment: 212380 Committed r156331: <http://trac.webkit.org/changeset/156331>
WebKit Commit Bot
Comment 3 2013-09-24 07:17:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.