[GTK] fast/images/exif-orientation-composited.html is failing https://bugs.webkit.org/show_bug.cgi?id=119731

Patch by Anton Obzhirov <a.obzhirov@samsung.com> on 2013-09-24
Reviewed by Carlos Garcia Campos.

Tools:

Add handling respect image orientation property in DRT.

* DumpRenderTree/gtk/TestRunnerGtk.cpp:
(TestRunner::overridePreference):

LayoutTests:

Unskip fast/images/exif-orientation-composited.html for GTK WK1 and WK2.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/139839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156331 268f45cc-cd09-0410-ab3c-d52691b4dbfc