Tools/DumpRenderTree/gtk/TestRunnerGtk.cpp
@@ -695,6 +695,8 @@ void TestRunner::overridePreference(JSStringRef key, JSStringRef value)
         propertyName = "enable-webaudio";
     else if (g_str_equal(originalName.get(), "WebKitDisplayImagesKey"))
         propertyName = "auto-load-images";
+    else if (g_str_equal(originalName.get(), "WebKitShouldRespectImageOrientation"))
+        propertyName = "respect-image-orientation";
     else if (g_str_equal(originalName.get(), "WebKitTabToLinksPreferenceKey")) {
         DumpRenderTreeSupportGtk::setLinksIncludedInFocusChain(booleanFromValue(valueAsString.get()));
         return;
